--- a/src/main/webapp/examples/hello-world/oauth-index.html
+++ b/src/main/webapp/examples/hello-world/oauth-index.html
@@ -84,7 +84,7 @@ function getCookie(cname) {
                   display : "touch",
           response_type : "token",
          client_id : "3MVG9oZtFCVWuSwOjhV7eE7EvvWPXW3q_I60Q_li_N2nCQ4ivHRe72uwC0GSr3IzDXq3QNScAx75_HYtGzu7y", //Add Your Consumer Key
-			redirect_uri : encodeURIComponent("https://heroku-amdocs.herokuapp.com/sdk1/callback.html") //Add your Callback URL
+			redirect_uri : encodeURIComponent("https://heroku-amdocs.herokuapp.com/sdk/callback.html") //Add your Callback URL
 	
         }});
         }
